Rest assured